external/coinmp: Update to CoinMP 1.8.4
...originally started mostly to simplify a then-upcoming change to address
std::bind2nd gone from libc++ for C++17 (which turned out to already be
partially addressed in this new CoinMP revision).  But that has since been
addressed with b97e8b9d13ef0f57f7cf0badbefcb038a8bbd137 "external/coinmp: Adapt
to std::bind2nd gone from C++17" on top of the old CoinMP 1.7.6, because
updating to 1.8.4 turned out to run into issues on Windows, see the email thread
starting at
<https://lists.freedesktop.org/archives/libreoffice/2022-September/089383.html>
"Maintaining building external/coinmp on Windows".

* <https://dev-www.libreoffice.org/src/CoinMP-1.8.4.tgz> is a copy of
  <https://www.coin-or.org/download/source/CoinMP/CoinMP-1.8.4.tgz>.

* Various of our patches are meanwhile addressed upstream, partially or in
  whole.

* The upstream configure scripts deteriorated and caused one of my Linux build's
  CC=/absolute/path/to/some/clang to be mistaken for MSVC which caused them to
  force LD=link, which in turn caused them to only build archives and not the
  shared libraries that we expect.  external/coinmp/clang-with-path.patch
  addresses that.

* There's apparently a new ClpSolver library now that also needs to be
  installed.  Otherwise at least CppunitTest_sccomp_swarmsolvertest failed due
  to

> warn:sal.osl:1950612:1950612:sal/osl/unx/module.cxx:152: dlopen(instdir/program/libsolverlo.so, 257): libClpSolver.so.1: cannot open shared object file: No such file or directory

* Plus modifications to external/coinmp/windows.build.patch.1 thankfully done by
  Taichi Haradaguchi <20001722@ymail.ne.jp> to make this actually compile on
  Windows (cf. the mailing list thread starting at
  <https://lists.freedesktop.org/archives/libreoffice/2022-September/089383.html>
  "Maintaining building external/coinmp on Windows")

Change-Id: I498c9513fa0d96d8ae2b9ba4c09dd792340db730
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140057
Tested-b

--- a/external/coinmp/no-binaries.patch.1
+++ b/external/coinmp/no-binaries.patch.1
@@ -11,7 +11,7 @@
 +bin_PROGRAMS = 
  @COIN_HAS_CHOLMOD_TRUE@am__append_7 = -I`$(CYGPATH_W) $(CHOLMODINCDIR)`
  @COIN_HAS_AMD_TRUE@am__append_8 = -I`$(CYGPATH_W) $(AMDINCDIR)`
- @COIN_HAS_ABC_TRUE@am__append_9 = AbcSimplex.hpp CoinAbcCommon.hpp AbcCommon.hpp
+ @COIN_HAS_ABC_TRUE@am__append_9 = AbcSimplex.hpp CoinAbcCommon.hpp AbcCommon.hpp AbcNonLinearCost.hpp
 --- coinmp/Cbc/src/Makefile.in
 +++ coinmp/Cbc/src/Makefile.in
 @@ -44,7 +44,7 @@
@@ -20,6 +20,6 @@
  host_triplet = @host@
 -bin_PROGRAMS = $(am__EXEEXT_1) $(am__EXEEXT_2)
 +bin_PROGRAMS =
+ @COIN_HAS_NTY_TRUE@am__append_1 = -I$(NTYINCDIR)
  
  ########################################################################
- #                            cbc program                               #
