Remove namespace prefix in manifest.xml (extras/pt-PT)
since other languages don't have it

Change-Id: I02dead7abcae1409f756d4daebbd23d4a70efbc6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150762
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>

--- a/extras/source/autocorr/lang/pt-PT/META-INF/manifest.xml
+++ b/extras/source/autocorr/lang/pt-PT/META-INF/manifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<manifest:manifest>
- <manifest:file-entry manifest:full-path="/" manifest:media-type=""/>
- <manifest:file-entry manifest:full-path="SentenceExceptList.xml" manifest:media-type="text/xml"/>
- <manifest:file-entry manifest:full-path="WordExceptList.xml" manifest:media-type="text/xml"/>
- <manifest:file-entry manifest:full-path="DocumentList.xml" manifest:media-type="text/xml"/>
-</manifest:manifest>
+<manifest>
+ <file-entry full-path="/" media-type=""/>
+ <file-entry full-path="SentenceExceptList.xml" media-type="text/xml"/>
+ <file-entry full-path="WordExceptList.xml" media-type="text/xml"/>
+ <file-entry full-path="DocumentList.xml" media-type="text/xml"/>
+</manifest>
