--- a/external/libjpeg-turbo/README
+++ b/external/libjpeg-turbo/README
@@ -1,6 +1,6 @@
 External library for reading/writing jpegs
 
-This is only used by the jpeg import filter that is provided
+This is used by the jpeg import and export filters that are provided
 for use by VCL see [[vcl/source/filter/jpeg]]
 
 From [https://www.libjpeg-turbo.org/].
