Update ICU to 73.2
Remove external/icu/ubsan.patch.1 that was applied upstream.

See https://icu.unicode.org/download/73

Change-Id: Ic2bc450b093f1c0ddb09ebe915a9c3e70d7e0964
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153574
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>

--- a/external/icu/README
+++ b/external/icu/README
@@ -1,1 +1,1 @@
-Library providing Unicode support, from [http://site.icu-project.org/].
+Library providing Unicode support, from [https://icu.unicode.org/].
