--- a/external/libtommath/README
+++ b/external/libtommath/README
@@ -3,4 +3,4 @@ integer library written entirely in C.
 
 Used by embedded firebird (external/firebird).
 
-https://www.libtom.net/LibTomMath/
+From [https://www.libtom.net/LibTomMath/].
