update skia to m116
(from m111)

SK_SUPPORT_GPU is now SK_GANESH

GR_OP_ALLOCATE_USE_NEW was removed in skia m111
    commit dd8f8ed3848cbe2032edc7ec08ef648a23e28ad9
    Author: Mike Klein <mtklein@google.com>
    Date:   Thu Apr 22 12:17:33 2021 -0500
    clean up defines that do nothing

the fast-png-write patch was removed. The underlying helper
function we need was removed in
    commit 0ec4c84abd0b578a5c792b04b56653cbc325530e
    Author: Kevin Lubick <kjlubick@google.com>
    Date:   Thu Apr 20 14:46:28 2023 -0400
    Remove SkImageEncoder and SkImage::encodeToData
So I updated our dump() function in SkiaHelper.cxx to
use the new Skia API.

The constexpr-template patch seems to be superceded by skia
changes.

SkOpts: :hash_fn has been replaced with SkChecksum::Hash32
    commit 657ed9cf2379a950b925cb2aba7c85d6e1dd36ed
    Author: Brian Osman <brianosman@google.com>
    Date:   Tue May 23 12:40:12 2023 +0000
    Reland "Replace SkOpts::hash/hash_fn with SkChecksum::Hash32"

The SkDebugf function needs to be exported from the library since
it leaks out to calling code via some of the headers.

Change-Id: I80ace8f25e660fa7889d22ef90676f47264d866c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154223
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>

--- a/external/skia/fix-pch.patch.1
+++ b/external/skia/fix-pch.patch.1
@@ -45,9 +45,9 @@ index 035f94e1f6..3cf12db902 100644
 +#ifndef SKSL_POISON
 +#define SKSL_POISON
 +
+ #include "src/sksl/SkSLBuiltinTypes.h"
  #include "src/sksl/SkSLCompiler.h"
  #include "src/sksl/SkSLContext.h"
- 
 @@ -38,3 +41,5 @@ private:
  };
  
