--- a/external/skia/windows-raster-surface-no-copies.patch.1
+++ b/external/skia/windows-raster-surface-no-copies.patch.1
@@ -2,7 +2,7 @@ diff --git a/tools/sk_app/win/RasterWindowContext_win.cpp b/tools/sk_app/win/Ras
 index 9548220ce6..49f1f9ed17 100644
 --- a/tools/sk_app/win/RasterWindowContext_win.cpp
 +++ b/tools/sk_app/win/RasterWindowContext_win.cpp
-@@ -55,7 +55,7 @@ void RasterWindowContext_win::resize(int w, int h) {
+@@ -53,7 +53,7 @@
      fWidth = w;
      fHeight = h;
      fBackbufferSurface.reset();
@@ -11,7 +11,7 @@ index 9548220ce6..49f1f9ed17 100644
      fSurfaceMemory.reset(bmpSize);
      BITMAPINFO* bmpInfo = reinterpret_cast<BITMAPINFO*>(fSurfaceMemory.get());
      ZeroMemory(bmpInfo, sizeof(BITMAPINFO));
-@@ -65,11 +65,12 @@ void RasterWindowContext_win::resize(int w, int h) {
+@@ -63,11 +63,12 @@
      bmpInfo->bmiHeader.biPlanes = 1;
      bmpInfo->bmiHeader.biBitCount = 32;
      bmpInfo->bmiHeader.biCompression = BI_RGB;
@@ -21,19 +21,21 @@ index 9548220ce6..49f1f9ed17 100644
  
      SkImageInfo info = SkImageInfo::Make(w, h, fDisplayParams.fColorType, kPremul_SkAlphaType,
                                           fDisplayParams.fColorSpace);
--    fBackbufferSurface = SkSurface::MakeRasterDirect(info, pixels, sizeof(uint32_t) * w);
-+    fBackbufferSurface = SkSurface::MakeRaster(info);
+-    fBackbufferSurface = SkSurfaces::WrapPixels(info, pixels, sizeof(uint32_t) * w);
++    fBackbufferSurface = SkSurfaces::Raster(info);
  }
  
  sk_sp<SkSurface> RasterWindowContext_win::getBackbufferSurface() { return fBackbufferSurface; }
-@@ -77,7 +78,9 @@ sk_sp<SkSurface> RasterWindowContext_win::getBackbufferSurface() { return fBackb
- void RasterWindowContext_win::swapBuffers() {
+@@ -75,8 +76,10 @@
+ void RasterWindowContext_win::onSwapBuffers() {
      BITMAPINFO* bmpInfo = reinterpret_cast<BITMAPINFO*>(fSurfaceMemory.get());
      HDC dc = GetDC(fWnd);
 -    StretchDIBits(dc, 0, 0, fWidth, fHeight, 0, 0, fWidth, fHeight, bmpInfo->bmiColors, bmpInfo,
+-                  DIB_RGB_COLORS, SRCCOPY);
 +    SkPixmap pixmap;
 +    fBackbufferSurface->peekPixels(&pixmap);
 +    StretchDIBits(dc, 0, 0, fWidth, fHeight, 0, 0, fWidth, fHeight, pixmap.addr(), bmpInfo,
-                   DIB_RGB_COLORS, SRCCOPY);
++                   DIB_RGB_COLORS, SRCCOPY);
      ReleaseDC(fWnd, dc);
  }
+ 
