--- a/external/skia/fix-alpha-difference-copy.patch.1
+++ b/external/skia/fix-alpha-difference-copy.patch.1
@@ -3,7 +3,7 @@ index df7d9a7025..7f94c2a660 100644
 --- a/src/core/SkBlitter_Sprite.cpp
 +++ b/src/core/SkBlitter_Sprite.cpp
 @@ -191,7 +191,7 @@ SkBlitter* SkBlitter::ChooseSprite(const SkPixmap& dst, const SkPaint& paint,
-     }
+     SkASSERT(alloc != nullptr);
  
      // TODO: in principle SkRasterPipelineSpriteBlitter could be made to handle this.
 -    if (source.alphaType() == kUnpremul_SkAlphaType) {
