--- a/external/skia/ubsan.patch.1
+++ b/external/skia/ubsan.patch.1
@@ -3,8 +3,8 @@ index 847e76f232..e27d9454f8 100644
 --- a/include/private/gpu/ganesh/GrContext_Base.h
 +++ b/include/private/gpu/ganesh/GrContext_Base.h
 @@ -20,7 +20,7 @@ class GrDirectContext;
- class GrImageContext;
- class GrRecordingContext;
+ struct GrContextOptions;
+ class GrBackendFormat;
  
 -class GrContext_Base : public SkRefCnt {
 +class SK_API GrContext_Base : public SkRefCnt {
@@ -27,8 +27,8 @@ index 847e76f232..e27d9454f8 100644
 -    SK_API GrBackendFormat defaultBackendFormat(SkColorType, GrRenderable) const;
 +    GrBackendFormat defaultBackendFormat(SkColorType, GrRenderable) const;
  
--    SK_API GrBackendFormat compressedBackendFormat(SkImage::CompressionType) const;
-+    GrBackendFormat compressedBackendFormat(SkImage::CompressionType) const;
+-    SK_API GrBackendFormat compressedBackendFormat(SkTextureCompressionType) const;
++    GrBackendFormat compressedBackendFormat(SkTextureCompressionType) const;
  
      /**
       * Gets the maximum supported sample count for a color type. 1 is returned if only non-MSAA
