Fix postprocess/README packimages.pl has been replaced by pack_images.py
with 423ee1020afe1bca896f2ecfc67ffbd49db5081c
tdf#106894 Rewrite packimages.pl in Python (pack_images.py)
in 2017

Change-Id: I337d4e048f59dd5f268930a7e51ab793d6008afc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154503
Tested-by: Julien Nabet <serval2412@yahoo.fr>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>

--- a/postprocess/packimages/README
+++ b/postprocess/packimages/README
@@ -1,6 +1,6 @@
 Packs used images in sorted order into theme .zip files
 
-The essence of this module is contained within [[solenv/bin/packimages.pl]].
+The essence of this module is contained within [[solenv/bin/pack_images.py]].
 This script takes several sources of information:
 
 * the list of images used in every .src file that is compiled
